--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 			
 				<a href="movie/cinema/cinemaindex.html" id="cinema">Cinema</a>
 		
-				<a href="movie/dvd/dvdindex" id="dvd">DVD</a>
+				<a href="movie/dvd/dvdindex.html" id="dvd">DVD</a>
 		
-				<a href="music/musicindex" id="music">Music</a>
+				<a href="music/musicindex.html" id="music">Music</a>
 			
-				<a href="theatre/theatreindex" id="theatre">Theatre</a>
+				<a href="theatre/theatreindex.html" id="theatre">Theatre</a>
 	</div>
 
 	<div id="mainbody">
