--- a/movie/cinema/cinemareviews.html
+++ b/movie/cinema/cinemareviews.html
@@ -10,17 +10,17 @@
 			
 				<a href="cinemaindex.html" id="cinema">Cinema</a>
 		
-				<a href="../../movie/dvd/dvdindex" id="dvd">DVD</a>
+				<a href="../../movie/dvd/dvdindex.html" id="dvd">DVD</a>
 		
-				<a href="../../music/musicindex" id="music">Music</a>
+				<a href="../../music/musicindex.html" id="music">Music</a>
 			
-				<a href="../../theatre/theatreindex" id="theatre">Theatre</a>
+				<a href="../../theatre/theatreindex.html" id="theatre">Theatre</a>
 	</div>
 
 	<div id="CImainbody">
-			<a href="cinemaindex.html" id="cinemaindex">Index</a>
-			<a href="cinemalisting.html" id="cinemalisting">Listing</a>
-			<a href="cinemareviews.html" id="cinemareviews">Reviews</a>
+			<a href="cinemaindex.html" id="index">Index</a>
+			<a href="cinemalisting.html" id="listing">Listing</a>
+			<a href="cinemareviews.html" id="reviews">Reviews</a>
 		<div>
 			<img src="../../assets/images/cinemareviews.jpg" id="cinemalistingimg">
 		</div>
